--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"jsdoc": "https://github.com/jsdoc3/jsdoc/archive/v3.3.0-alpha7.tar.gz",
 		"taffydb": "https://github.com/hegemonic/taffydb/tarball/master",
 		"catharsis": "~0.7.1",
-		"ink-docstrap": "0.4.12"
+		"ink-docstrap": "0.4.12",
+		"underscore":"1.7.0"
 	},
 	"scripts": {
 		"postinstall": "node installPrettify.js"
