--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "jsdoc-amddcl",
 	"version": "0.1.0-dev",
 	"dependencies": {
-		"jsdoc": "https://github.com/jsdoc3/jsdoc/archive/v3.3.0-alpha7.tar.gz",
+		"jsdoc": "https://github.com/jsdoc3/jsdoc/archive/3.4.0.tar.gz",
 		"taffydb": "https://github.com/hegemonic/taffydb/tarball/master",
 		"catharsis": "~0.7.1",
 		"ink-docstrap": "0.4.12",
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"grunt": "~0.4.0",
-                "ink-docstrap":"0.5.2"
+		"ink-docstrap":"0.5.2"
 	},
 	"licenses": [
 		{
